Bug 428657 - Nothing happens when I click on "Tools > Run command"
Summary: Nothing happens when I click on "Tools > Run command"
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-03 18:50 UTC by Patrick Silva
Modified: 2020-11-08 13:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-11-03 18:50:28 UTC
STEPS TO REPRODUCE
1. click on "Tools" in the upper left corner and choose "Run command"
2. 
3. 

OBSERVED RESULT
nothing happens

EXPECTED RESULT

I'm not sure. Run krunner?

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.0
Comment 1 Alexander Lohnau 2020-11-03 19:23:57 UTC
Yes, looking at the code it should open KRunner. (libksysguard/processui/ksysguardprocesslist.cpp:441).

But TBH I am not sure if just starting  KRunner without any specifiy plugin is a useful addition to the tool menu, so maybe we should just remove the entry?
Comment 2 David Redondo 2020-11-04 09:58:20 UTC
It's there because ksysguard has it ;)
Comment 3 Bug Janitor Service 2020-11-04 10:21:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/93
Comment 4 Bug Janitor Service 2020-11-04 10:57:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-systemmonitor/-/merge_requests/62
Comment 5 Alexander Lohnau 2020-11-07 08:36:57 UTC
Git commit c2ec57109011cddaa5d8dbbcb0d5814e82c4b35f by Alexander Lohnau.
Committed on 07/11/2020 at 08:36.
Pushed by alex into branch 'master'.

Remove defunct action to open KRunner

M  +0    -22   processui/ksysguardprocesslist.cpp

https://invent.kde.org/plasma/libksysguard/commit/c2ec57109011cddaa5d8dbbcb0d5814e82c4b35f
Comment 6 Bug Janitor Service 2020-11-07 17:05:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-systemmonitor/-/merge_requests/66
Comment 7 Alexander Lohnau 2020-11-08 13:46:53 UTC
Git commit 43bf44798f1140cf0bd26259b26bc84fe4d7c723 by Alexander Lohnau.
Committed on 08/11/2020 at 13:46.
Pushed by alex into branch 'master'.

Remove defunct option to open KRunner
FIXED-IN: 5.21

Fixes https://invent.kde.org/plasma/plasma-systemmonitor/-/issues/9

M  +1    -12   src/ToolsModel.cpp

https://invent.kde.org/plasma/plasma-systemmonitor/commit/43bf44798f1140cf0bd26259b26bc84fe4d7c723