Use DBus call to show KRunner

BUG:428657
Fixes #9